<resources>
    <string name="app_name">solXpect</string>
    <string name="activity_about">About</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_weather">Forecast</string>
    <string name="activity_manage">Manage locations</string>
    <string name="action_refresh">Refresh</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="next">Next</string>
    <string name="okay">Okay</string>
    <string name="slide1_heading">Welcome!</string>
    <string name="slide1_text">solXpect forecasts the output of your solar power plant</string>
    <string name="slide2_heading" translatable="false">Github</string>
    <string name="slide2_text">The sourcecode of this app is available at GitHub. For further explanations have a look at the About Page.</string>
    <string name="card_details_heading">Now</string>
    <string name="card_details_humidity">Humidity:</string>
    <string name="card_details_pressure">Pressure:</string>
    <string name="card_details_wind_speed">Wind:</string>
    <string name="card_week_heading">Week</string>
    <string name="card_day_heading">Course of the day</string>
    <string name="card_error_heading">Error fetching weather data</string>
    <string name="card_error_content">Please try to update!</string>
    <string name="about_privacy_heading">Privacy Info</string>
    <string name="about">About</string>
    <string name="version_number" translatable="false">Version</string>
    <string name="about_license">License</string>
    <string name="about_license_text">This application is derived from Privacy Friendly Weather, developed by the research group SECUSO. Sourcecode licensed under GPLv3. The app uses icons from Google Material Design Icons licensed under Apache License Version 2.0, the Leaflet library which is licensed under 2-clause BSD License, AutoSuggestTextViewAPICall which is licensed under Apache License Version 2.0, Solarpositioning (net.e175.klaus:solarpositioning) which is licensed under MIT License,  and WilliamChart library (com.db.chart) which is licensed under Apache License Version 2.0</string>
    <string name="about_more_info">More information can be found on:</string>
    <string name="about_github" translatable="false"><a href="https://github.com/woheller69/solxpect">Github-Repo</a></string>
    <string name="about_openmeteo" translatable="false"><a href="https://open-meteo.com">Open-Meteo \n(Attribution 4.0 International CC BY 4.0)</a></string>
    <string name="activity_settings_title">Settings</string>
    <string name="settings_title_units">Units</string>
    <string name="settings_summary_temperature">Set the unit to use for displaying temperatures</string>
    <string name="settings_title_temperature">Temperatures</string>
    <string name="settings_celsius">Celsius</string>
    <string name="settings_fahrenheit">Fahrenheit</string>
    <string name="settings_summary_distance">Set the unit to use for displaying distances</string>
    <string name="settings_title_distance">Distances</string>
    <string name="settings_kilometers">Kilometers</string>
    <string name="settings_miles">Miles</string>
    <string name="abbreviation_monday">Mo.</string>
    <string name="abbreviation_tuesday">Tu.</string>
    <string name="abbreviation_wednesday">We.</string>
    <string name="abbreviation_thursday">Th.</string>
    <string name="abbreviation_friday">Fr.</string>
    <string name="abbreviation_saturday">Sa.</string>
    <string name="abbreviation_sunday">Su.</string>
    <string name="dialog_add_label">Enter the location to add:</string>
    <string name="dialog_add_no_city_found">No location was found that matches your input. It is recommended to select one of the items from the dropdown list.  </string>
    <string name="dialog_add_close_button">Close</string>
    <string name="dialog_add_add_button">Add</string>
    <string name="error_convert_to_json">The retrieved weather data was not well-formed. </string>
    <string name="error_no_internet">Your Device is not connected to the Internet</string>
    <string name="error_fetch_forecast">Error while updating Forecast, please try again!</string>
    <string name="error_no_city_selected">There is no location selected. To select a location go to \"Manage locations\".</string>
    <string name="settings_interval_quarter">15 min</string>
    <string name="settings_interval_half">30 min</string>
    <string name="settings_interval_one">1 h</string>
    <string name="settings_interval_two">2 h</string>
    <string name="settings_interval_six">6 h</string>
    <string name="settings_interval_twelve">12 h</string>
    <string name="settings_interval_twentyfour">24 h</string>
    <string name="settings_intervals">Intervals</string>
    <string name="settings_update_interval">Update interval</string>
    <string name="settings_interval_summary">Set the interval of automatic updates</string>
    <string name="about_privacy_answer">solXpect only uses the permission \"Internet\" to retrieve weather data. It further does not include any tracking mechanisms or advertisement.</string>
    <string name="about_where_from">Where do the weather informations come from?</string>
    <string name="about_where_from_answer">Weather information is fetched from</string>
    <string name="long_press_text">Hold and drag to sort.</string>
    <string name="swipe_to_delete">Swipe to delete</string>
    <string name="settings_title_display_options">Display options</string>
    <string name="infoProvider">Weather information is fetched from Open-Meteo.com</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="chart">Chart</string>
    <string name="units_rh">% rh</string>
    <string name="units_kWh">kWh</string>
    <string name="units_km">km</string>
    <string name="units_hPa">hPa</string>
    <string name="units_Bft">Bft</string>
    <string name="units_mm_h">mm/h</string>
    <string name="units_km_h">km/h</string>
    <string name="units_mph">mph</string>
    <string name="card_details_rain60min">☔ 60 min:</string>
    <string name="error_no_rain60min_data">no data</string>
    <string name="dialog_edit_change_button">Modify</string>
    <string name="edit_location_hint_name">Name</string>
    <string name="settings_search">Search</string>
    <string name="settings_temp_decimal">Show temperature with one decimal</string>
    <string name="settings_darkmode">Android 10+ Dark Mode</string>
    <string name="settings_position">Position</string>
    <string name="settings_GPS_summary">Allow usage of current GPS position in first TAB and in current weather widget. Position update is triggered automatically by widget.</string>
    <string name="settings_GPS_position">Allow GPS usage</string>
    <string name="error_no_position">No position available</string>
    <string name="settings_time24h">24-hour format</string>
    <string name="summary_time24h">Override system setting</string>
    <string name="settings_wind">Use Beaufort scale</string>
    <string name="dialog_OK_button">OK</string>
    <string name="dialog_NO_button">No</string>
    <string name="dialog_Later_button">Maybe later</string>
    <string name="dialog_StarOnGitHub">Do you like this app? Please give a star on GitHub and buy the developer a coffee via PayPal.</string>
    <string name="settings_show_pressure">Show air pressure</string>
    <string name="action_position" translatable="false">Update Location</string>
    <string name="settings_GPS_manual">Manual update only</string>
    <string name="rationale_background_location">Please also allow GPS usage in the background for use in the widget</string>
    <string name="error_no_gps">Please turn on GPS</string>
    <string name="slide3_heading">Open-Meteo</string>
    <string name="summary_reanalyze">Improve week icons by analyzing hourly forecasts between sunrise and sunset (experimental).</string>
    <string name="settings_reanalyze">Week Icons</string>
    <string name="settings_precipitation">Precipitation</string>
    <string name="summary_precipitation">Use snow amount  instead of the equivalent amount of water.</string>
    <string name="settings_forecast_days">Number of forecast days</string>
    <string name="edit_location_hint_latitude">Latitude [°]</string>
    <string name="edit_location_hint_longitude">Longitude [°]</string>
    <string name="edit_location_hint_azimuth">Azimuth [°]</string>
    <string name="edit_location_hint_tilt">Tilt [°]</string>
    <string name="edit_location_hint_cells_max_power">Cells max power [W]</string>
    <string name="edit_location_hint_cells_efficiency">Cells efficiency [%]</string>
    <string name="edit_location_hint_cells_area">Cell area [m\u00b2]</string>
    <string name="edit_location_hint_diffuse_efficiency">Diffuse radiation efficiency [%]</string>
    <string name="edit_location_hint_inverter_power_limit">Inverter power [W]</string>
    <string name="edit_location_hint_inverter_efficiency">Inverter efficiency [%]</string>
    <string name="units_Wh">Wh</string>
    <string name="edit_location_title">Edit location</string>
    <string name="edit_location_shading_azimuth_heading">Azimuth range [°]</string>
    <string name="edit_location_shading_solar_elevation_heading">Min. solar elevation [°]</string>
    <string name="edit_location_shading_opacity_heading">Shading below this elevation [%]</string>
    <string name="edit_location_shading_heading">Shading</string>
    <string name="activity_help">Instructions</string>
    <string name="action_sun_position">Sun position</string>
    <string name="action_sun_elevation">Elevation [°]</string>
</resources>
