<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_location_hint_name"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/EditLocation_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_location_hint_name"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_location_hint_latitude"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/EditLocation_Lat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:hint="@string/edit_location_hint_latitude"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_location_hint_longitude"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/EditLocation_Lon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:hint="@string/edit_location_hint_longitude"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_location_hint_azimuth"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/EditLocation_Azimuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:hint="@string/edit_location_hint_azimuth"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_location_hint_elevation"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/EditLocation_Elevation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:hint="@string/edit_location_hint_elevation"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_location_hint_cells_max_power"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/EditLocation_Cell_Max_Power"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:hint="@string/edit_location_hint_cells_max_power"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_location_hint_cells_area"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/EditLocation_Cells_Area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:hint="@string/edit_location_hint_cells_area"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_location_hint_cells_efficiency"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/EditLocation_Cell_Efficiency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:hint="@string/edit_location_hint_cells_efficiency"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_location_hint_diffuse_efficiency"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/EditLocation_Diffuse_Efficiency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:hint="@string/edit_location_hint_diffuse_efficiency"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_location_hint_converter_power_limit"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/EditLocation_Converter_Power_Limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:hint="@string/edit_location_hint_converter_power_limit"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_location_hint_converter_efficiency"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/EditLocation_Converter_Efficiency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:hint="@string/edit_location_hint_converter_efficiency"/>
</LinearLayout>
</ScrollView>